--- a/workspace_html/html_exam/02_exam_hall.html
+++ b/workspace_html/html_exam/02_exam_hall.html
@@ -9,11 +9,11 @@
 <body>
     <div class="msg">
         <div id="list">
-            <div><a href="http://172.30.1.1:5500/exam/02_exam_photo.html">웨딩사진보기</a></div>
+            <div><a href="http://172.30.1.1:5500/exam/02_exam.html">청첩장</a></div>
             <div><a href="#">축하메세지</a></div>
-            <div><a href="http://172.30.1.1:5500/exam/02_exam_hall.html">오시는길</a></div>
+            <div><a href="#">오시는길</a></div>
         </div>
-        <div><img src="/exam/KakaoTalk_20241217_154156448.jpg"></div>
+        <div><img src="/exam/스크린샷 2024-12-18 212514.png"></div>
     </div>
 </body>
 </html>
