--- a/workspace_html/html_exam/kitchen.html
+++ b/workspace_html/html_exam/kitchen.html
@@ -52,7 +52,7 @@
         }
         .s2-img{
             display: inline-flex;
-            width: 90%;
+            width: 75%;
             height: 87%;
             justify-content: space-between;
             align-items: center;
@@ -70,14 +70,17 @@
         .sen{
             border: 7px solid black;
             background-color: white;
-            width: 35%;
-            height: 300px;
+            width: 30%;
+            height: 250px;
             padding: 30px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
         .cake{
             /* display: flex; */
-            width: 48%;
-            height: 100%;
+            width: 38%;
+            height: 548px;
         } 
         .li1, .li1-1{
             /* text-align: center; */
@@ -86,11 +89,13 @@
             padding-left: 3%;
         }
         .li1{
-            font-size: 50px;
-            margin-top: 1%;
+            font-size: 2.25rem;
+            font-style: bold;
+            box-sizing: border-box;
+            /* border: 1px solid red; */
         }
         .li1-1{
-            font-size: 25px;
+            font-size: normal;
         }
         
         .s3{
@@ -325,7 +330,7 @@
             <div class="back-y"></div>
             <div class="s2-img">
                 <div class="sen">
-                    <div class="li1">Cafe Food Menu</div>
+                    <div class="li1"> Cafe Food Menu</div>
                     <br>
                     <br>
                     <div class="li1-1">All of our food is prepared by our team of trained kitchen staff from the sealed glass kitchen where you can see your food being made, without risk of little paws getting involved.</div>
