이벤트 및 실습 커밋

--- a/workspace_html/javascript/03_arr.html
+++ b/workspace_html/javascript/03_arr.html
@@ -115,6 +115,7 @@
         // 배열 순서 오름차순
         // 내림차순은 오름차순 한 뒤 reverse로 구현
         // 따로 지원 없음
+        // 문자로 변경후 정렬 실행하므로 callBack함수 사용
         arr.sort();
         console.log(arr)
         
